# mini3d

./: .gitignore  CMakeLists.txt  Mini3D.vcxproj  device.cpp  math.cpp  math.h  mini3d.bat  mini3d.cpp  mini3d.h  screen.cpp  transform.cpp  window.cpp  window.h
